ca2-45: Managers Schedule - Bulk of work complete; hardcoded schedule; layout spacing issue

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13,6 +13,11 @@ html, body
     background-color: #154B81;
 }
 
+.bg-disabled
+{
+    background-color: #b8b8b8;
+}
+
 .btn-primary
 {
     background-color: #154B81;
